Logo causing issues on mobile.

--- a/src/app/map/map.component.css
+++ b/src/app/map/map.component.css
@@ -23,3 +23,7 @@
   padding:auto;
   text-align: center;
 }
+
+video {
+  width: 100%;
+}
